# crewlore

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: anchors.md  evaluating-on-your-codebase.md  mcp.md  recording.tape  scrub.md
docs/demo/: README.md  candidate-tasks.md  capture-playbook.md  conference-runbook.md  q-and-a.md  recording.tape  session-briefs.md
docs/examples/: README.md
docs/examples/pydantic-ai/: README.md  book.md  claims.jsonl  provenance.md
scripts/: demo.py
src/lore/: __init__.py  actuation.py  cli.py  replay.py  schemas.py  scrub.py  store.py
src/lore/capture/: ingest.py  signals.py
src/lore/capture/adapters/: claude_code.py
src/lore/compile/: extractor.py  llm.py  pipeline.py  run.py
src/lore/serve/: mcp_server.py  server.py
tests/e2e/: test_end_to_end.py
tests/integration/: test_auto_compile.py  test_cli.py  test_extraction_cache.py  test_run_compile.py
tests/unit/: test_actuation.py  test_claude_code_adapter.py  test_compiler.py  test_extractor.py  test_ingest.py  test_llm.py  test_nsf_and_conflict.py  test_replay.py  test_schemas.py  test_scrub.py  test_serve.py  test_signals.py  test_store.py
