[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewlore"
version = "0.1.0"
description = "An open, local-first, harness-agnostic compiler that turns AI-coding-agent sessions into a versioned, plaintext team tribal-knowledge layer in your own git repo."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    { name = "crewlore Contributors" },
]
keywords = ["ai", "agents", "knowledge", "tribal-knowledge", "compiler", "mcp", "cli", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.0,<16.0",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    # Anthropic is the default model provider, so it ships in the base install:
    # `pipx install crewlore` then `lore compile` works with just an API key.
    "anthropic>=0.39",
]

[project.scripts]
lore = "lore.cli:app"

[project.optional-dependencies]
# OpenAI SDK — for `model.provider: openai` and for `local` (OpenAI-compatible endpoints).
openai = ["openai>=1.0"]
serve = ["mcp>=1.0"]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "openai>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/lore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
